--- a/littlelemon/templates/index.html
+++ b/littlelemon/templates/index.html
@@ -1,14 +1,10 @@
 {% load static %}
-<!DOCTYPE html>
-
 <html>
   <head>
     <title>Capstone Project</title>
-    <div style="text-align: center; margin-top: 1rem">
-      <img src="{% static 'restaurant/logo.png' %}" alt="little lemon logo" />
-    </div>
   </head>
   <body>
-    <h1 style="text-align: center">Welcome To LittleLemon Restaurant</h1>
+    <h1 style="text-align: center">Welcome To Little Lemon Restaurant</h1>
+    <img src="{% static 'restaurant/logo.png' %}" />
   </body>
 </html>
